# deep_research

./: .gitignore  HANDOFF.md  HARDWARE.md  MODELS.md  PLAN_GPU_COORDINATOR.md  PLAN_KB_ARCHITECTURE.md  PLAN_RESEARCH_SOURCE_ROUTING.md  README.md  RESEARCH_WORK_HANDOFF.md  ROADMAP.md  config.example.yaml  docker-compose.yml  pyproject.toml
cli/: eval.py  kb.py  main.py
deep_research/: agent.py  config.py  db.py  llm.py  model_backends.py  model_switching.py  models.py  prompts.py  retry.py
deep_research/evals/: registry.py  report.py  server.py
deep_research/kb/: ad_check.py  artifacts.py  canonical.py  chunking.py  claim_filters.py  contradiction_triage.py  conversation.py  counter_evidence.py  db.py  decision_log.py  embeddings.py  extraction.py  gpu_idle.py  ingest.py  jobs.py  merge.py  playlists.py  (+9 more)
frontend/: index.html  package-lock.json  package.json  vite.config.js
searxng/: settings.yml
spike/: FINDINGS.md  README.md  run.py  validate_embeddings.py
systemd/: deep-research-llama.service  deep-research-nightly-verification.service  deep-research-nightly-verification.timer  deep-research.service
tests/: conftest.py  test_ad_check.py  test_canonical.py  test_conversation.py  test_eval_registry.py  test_extra_research.py  test_extraction.py  test_job_worker.py  test_jobs.py  test_llama_server.py  test_merge.py  test_model_experiments.py  test_reports.py  test_resolution.py  test_retry.py  test_review_context.py  test_search.py  test_search_usage.py  test_topics.py  test_trust.py  test_verification.py  test_web_research.py
web/: app.py  kb_routes.py
(+22 files in other folders)
