[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-research"
version = "0.1.0"
description = "Local LLM-powered research tool with web search and scraping"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "aiosqlite>=0.20",
]

[project.scripts]
deep-research = "cli.main:main"

[tool.setuptools.packages.find]
include = ["deep_research*", "cli*"]
