[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-research"
version = "0.1.0"
description = "Local LLM-powered research tool with web search and scraping"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "aiosqlite>=0.20",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.0",
    "youtube-transcript-api>=0.6",
    "pypdf>=5.0",
    "python-docx>=1.0",
    "asyncpg>=0.30",
    "pgvector>=0.3",
]

[project.scripts]
deep-research = "cli.main:main"
deep-research-kb = "cli.kb:main"

[tool.setuptools.packages.find]
include = ["deep_research*", "cli*", "web*"]
